# ccommit-analyser

./: Cargo.toml  Dockerfile  docker-compose.yml
.githooks/: commit-msg
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/validator/: line_error.rs  mod.rs  validator_error.rs
src/validator/check_commit_type/: mod.rs
src/validator/check_line_length/: mod.rs
