[package]
name = "ccomits-analyser"
version = "0.1.0"
authors = ["caiomcg <caiomcg@gmail.com>"]
edition = "2018"
readme = "README.md"

[lib]
name = "ccommits"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.8.2"
regex = "1.4.4"

